kubernetes-networks/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: homework
  name: nginx-service
spec:
  type: ClusterIP
  selector:
    app: nginx
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 8000
