kubernetes-networks/service_lb.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: homework
  name: nginx-service-lb
spec:
  type: LoadBalancer
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
